--- a/client/styles/scss/layouts/home/_getting.scss
+++ b/client/styles/scss/layouts/home/_getting.scss
@@ -7,18 +7,22 @@
             font-size: 44px;
             line-height: 60px;
             color: #ffffff;
-            @include breakpoint(extra-small) {
+            @include breakpoint(small) {
                 font-size: 38px;
+            }
+            @include breakpoint(extra-small) {
+                font-size: 28px;
+                line-height: 30px;
             }
         }
 
     ul {
-        @include breakpoint(extra-small) {
+        @include breakpoint(small) {
             margin-top: 37px;
         }
-        @media(max-width: 380px) {
+        @include breakpoint(extra-small){
             width: 100%;
-            margin: 37px auto 0;
+            margin: 37px 0 0;
         }
 
         li {
@@ -29,47 +33,70 @@
             @include box-shadow(0px 2px 1px rgba(0, 0, 0, 0.125));
             @include border-radius(3px);
             //@include background-image(radial-gradient(top, #f0f0f0 0,#cdcdcd 100%));
+            @include breakpoint(small) {
+                margin-top: 19px;
+            }
 
             &:first-child {
                 margin-top: 0;
             }
+
             span {
                 float: left;
                 width: 48px;
                 height: 38px;
+                background-image: url("../../images/sprites/social.png");
+                background-size: cover;
+                @include breakpoint(small) {
+                    width: 75px;
+                    height: 60px;
+                    padding: 10px;
+                }
             }
             a {
-
                 display: block;
-                background-image: url("../../images/social/social.png");
                 font-family: "Open sans";
                 font-weight: 600;
                 font-size: 13px;
                 line-height: 38px;
                 text-align: center;
                 color: #494a4a;
-                @include breakpoint(medium) {
-                    font-size: 12px;
+                @include breakpoint(small) {
+                    font-size: 20px;
+                    line-height: 60px;
+                }
+                @include breakpoint(extra-small) {
+                    font-size: 14px;
+                    line-height: 60px;
                 }
             }
             &:nth-child(1) {
                 a > span {
                     background-color: #0aa2e0;
-                    @extend .social-tw;
+                    background-position: 0 -76px;
+                    @include breakpoint(small) {
+                    background-position: 0 -116px;
+                    }
                 }
             }
 
             &:nth-child(2) {
                 a > span {
                     background-color: #3a5591;
-                    @extend .social-fb;
+                    background-position: 0 -114px;
+                    @include breakpoint(small) {
+                        background-position: 0 -178px;
+                    }
                 }
             }
 
             &:nth-child(3) {
                 a > span {
                     background-color: #cd513e;
-                    @extend .social-gl;
+                    background-position: 0 -38px;
+                    @include breakpoint(small) {
+                        background-position: 0 -58px;
+                    }
                 }
             }
             &:nth-child(4) {
@@ -78,17 +105,21 @@
                 @include box-shadow(none);
                 p {
                     margin: 0;
+                    font-size: 13px;
                     background-image: url("../../images/or-u-can.png");
                     background-repeat: no-repeat;
                     background-position: 0 45%;
                     background-size: cover;
                     color: #55a4da;
+                    @include breakpoint(small) {
+                        font-size: 20px;
+                    }
                 }
             }
             &:nth-child(5) {
                 a > span {
                     background-color: #3e9ee3;
-                    @extend .social-mail;
+                    background-position: 0 0;
                 }
             }
         }
@@ -96,21 +127,24 @@
     .monitor {
         height: 288px;
         margin-top: 68px;
-        background-image: url("../../images/monitor.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-        @include breakpoint(medium) {
+        @include breakpoint(large) {
             height: 262px;
         }
-        @include breakpoint(small) {
+        @include breakpoint(medium) {
             height: 219px;
         }
-        @include breakpoint(extra-small) {
+        @include breakpoint(small) {
             height: 186px;
             margin-top: 32px;
         }
-        @include breakpoint(s-extra-small){
+        @include breakpoint(extra-small){
+            width: 100%;
+            margin: 32px auto 0;
             height: 113px;
+        }
+        img{
+            width: 100%;
+            height: 100%;
         }
     }
 
