--- a/client/styles/scss/mixins/_breakpoints.scss
+++ b/client/styles/scss/mixins/_breakpoints.scss
@@ -1,23 +1,23 @@
 @mixin breakpoint($point) {
     @if $point == large {
-        @media (min-width: 1200px) {
-            @content;
-        }
-    } @else if $point == medium {
         @media (min-width: 992px) and (max-width: 1199px) {
             @content;
         }
-    } @else if $point == small {
+    } @else if $point == medium {
         @media (min-width: 768px) and (max-width: 991px) {
             @content;
         }
-    } @else if $point == extra-small {
+    } @else if $point == small {
         @media (max-width: 767px) {
+            @content;
+        }
+    } @else if $point == extra-small {
+        @media (max-width: 600px) {
             @content;
         }
     } @else if $point == s-extra-small {
         @media (max-width: 380px) {
-            @content;
         }
+        @content;
     }
 }
