--- a/client/styles/scss/widgets/_header.scss
+++ b/client/styles/scss/widgets/_header.scss
@@ -28,10 +28,13 @@ header {
             margin-top: 35px;
             width: 228px;
             height: 42px;
-            background-image: url("../../images/logo.png");
+            background-image: url("../../images/logo/logo.png");
             background-repeat: no-repeat;
             background-size: contain;
-            @include breakpoint(extra-small) {
+            @include breakpoint(medium) {
+                margin-left: 39px;
+            }
+            @include breakpoint(small) {
                 width: 47.6%;
                 height: 46px;
                 margin-left: 39px;
@@ -47,7 +50,7 @@ header {
         border: none;
         font-size: 0;
         @include box-shadow(none);
-        @include breakpoint(extra-small) {
+        @include breakpoint(small) {
             width: 100%;
             padding: 0;
             background-color: #57baff;
@@ -56,7 +59,7 @@ header {
         li {
             display: inline-block;
             margin-right: 30px;
-            @include breakpoint(extra-small) {
+            @include breakpoint(small) {
                 display: block;
                 margin: 0 auto;
                 border-bottom: 4px solid #53b1f2;
@@ -69,13 +72,13 @@ header {
 
             a {
                 font-size: 13px;
-                @include breakpoint(extra-small) {
+                @include breakpoint(small) {
                     font-family: "Helvetica Light";
                     font-weight: 300;
                     font-size: 40px;
                     color: #fcf7f4;
                 }
-                @include breakpoint(s-extra-small){
+                @include breakpoint(extra-small){
                     font-size: 30px;
                 }
 
