--- a/client/styles/css/index.css
+++ b/client/styles/css/index.css
@@ -7220,6 +7220,33 @@ a, a:hover {
   src: url('fonts/../../../fonts/helvetica-regular/Helvetica.ttf') format('truetype'), url('fonts/../../../fonts/helvetica-regular/Helvetica.woff') format('woff'), url('fonts/../../../fonts/helvetica-regular/Helvetica.svg') format('svg'), url('fonts/../../../fonts/helvetica-regular/Helvetica.otf') format('opentype');
 }
 
+.button {
+  display: block;
+  font-family: "Open sans";
+  font-weight: 600;
+  text-align: center;
+  color: #494a4a;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
+  background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, rgba(246, 246, 246, 0.6)), color-stop(100%, rgba(184, 186, 187, 0.6)));
+  background-image: -webkit-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: -moz-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: -o-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
+}
+.button:hover {
+  background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, #f6f6f6), color-stop(100%, #b8babb));
+  background-image: -webkit-radial-gradient(top, #f6f6f6 0%, #b8babb 100%);
+  background-image: -moz-radial-gradient(top, #f6f6f6 0%, #b8babb 100%);
+  background-image: -o-radial-gradient(top, #f6f6f6 0%, #b8babb 100%);
+  background-image: radial-gradient(top, #f6f6f6 0%, #b8babb 100%);
+}
+
 header {
   max-width: 970px;
   margin: 0 auto;
@@ -7227,6 +7254,18 @@ header {
 header .btn-style {
   margin: 0;
   padding: 47px 31px;
+}
+header .btn-style .span-style {
+  width: 37px;
+  height: 6px;
+  background-color: #d2d4d4;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+}
+header .btn-style:hover, header .btn-style:focus {
   background-color: #57baff;
   -webkit-border-radius: initial;
   -moz-border-radius: initial;
@@ -7234,15 +7273,8 @@ header .btn-style {
   -o-border-radius: initial;
   border-radius: initial;
 }
-header .btn-style .span-style {
-  width: 37px;
-  height: 6px;
+header .btn-style:hover .span-style, header .btn-style:focus .span-style {
   background-color: #ffffff;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
 }
 header a {
   display: block;
@@ -7355,17 +7387,15 @@ header .nav-style li a {
   }
 }
 .home .getting ul li {
-  border: 1px solid #babcbd;
+  overflow: hidden;
   margin-top: 9px;
-  background: -webkit-linear-gradient(top, #f0f0f0 0, #cdcdcd 100%);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.125);
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.125);
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
 }
 @media (max-width: 767px) {
   .home .getting ul li {
@@ -7375,39 +7405,39 @@ header .nav-style li a {
 .home .getting ul li:first-child {
   margin-top: 0;
 }
-.home .getting ul li span {
-  float: left;
-  width: 48px;
-  height: 38px;
-  background-image: url("../../images/sprites/social.png");
-  background-size: cover;
-}
-@media (max-width: 767px) {
-  .home .getting ul li span {
-    width: 75px;
-    height: 60px;
-    padding: 10px;
-  }
-}
-.home .getting ul li a {
-  display: block;
-  font-family: "Open sans";
-  font-weight: 600;
+.home .getting ul li .button {
   font-size: 13px;
   line-height: 38px;
   text-align: center;
   color: #494a4a;
 }
 @media (max-width: 767px) {
-  .home .getting ul li a {
+  .home .getting ul li .button {
     font-size: 20px;
     line-height: 60px;
   }
 }
 @media (max-width: 600px) {
-  .home .getting ul li a {
+  .home .getting ul li .button {
     font-size: 14px;
     line-height: 60px;
+  }
+}
+.home .getting ul li .button span {
+  float: left;
+  width: 48px;
+  height: 38px;
+  border-top: 1px rgba(255, 255, 255, 0.5) solid;
+  border-right: 1px rgba(0, 0, 0, 0.2) solid;
+  border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+  background-image: url("../../images/sprites/social.png");
+  background-size: cover;
+}
+@media (max-width: 767px) {
+  .home .getting ul li .button span {
+    width: 75px;
+    height: 60px;
+    padding: 10px;
   }
 }
 .home .getting ul li:nth-child(1) a > span {
@@ -7577,4 +7607,288 @@ header .nav-style li a {
   .home .events .wrapper figure figcaption p {
     margin-top: 15px;
   }
+}
+.home .twitts {
+  padding: 55px 0 60px;
+  background-color: #1769a4;
+  background-image: url("../../images/backgrounds/shadow-twitts.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+.home .twitts .twitter-logo {
+  width: 37px;
+  height: 31px;
+}
+@media (max-width: 767px) {
+  .home .twitts .twitter-logo {
+    width: 74px;
+    height: 62px;
+  }
+}
+.home .twitts h2 {
+  margin: 0;
+  font-family: "Helvetica Light";
+  font-size: 24px;
+  color: #fafbfc;
+}
+@media (max-width: 767px) {
+  .home .twitts h2 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 600px) {
+  .home .twitts h2 {
+    font-size: 24px;
+  }
+}
+.home .twitts .reviews {
+  padding: 0;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .twitts .reviews {
+    padding: 0 15px;
+  }
+}
+@media (max-width: 767px) {
+  .home .twitts .reviews {
+    padding: 0 40px;
+  }
+}
+@media (max-width: 600px) {
+  .home .twitts .reviews {
+    padding: 0 15px;
+  }
+}
+.home .twitts .reviews figure {
+  margin-top: 32px;
+}
+@media (max-width: 600px) {
+  .home .twitts .reviews figure {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+.home .twitts .reviews figure img {
+  width: 70px;
+  -webkit-box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.125);
+  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.125);
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .home .twitts .reviews figure img {
+    width: 51px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .twitts .reviews figure img {
+    width: 64px;
+  }
+}
+@media (max-width: 767px) {
+  .home .twitts .reviews figure img {
+    width: 140px;
+  }
+}
+@media (max-width: 600px) {
+  .home .twitts .reviews figure img {
+    width: 28.526%;
+  }
+}
+.home .twitts .reviews figure figcaption {
+  position: relative;
+  float: right;
+  z-index: 1;
+  width: 62.962963%;
+  padding: 15px 10px 15px 15px;
+  border: 1px solid #d4d4d4;
+  background-color: #f7f8f8;
+  text-align: left;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .home .twitts .reviews figure figcaption {
+    width: 63.18%;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .twitts .reviews figure figcaption {
+    width: 72.75%;
+  }
+}
+@media (max-width: 767px) {
+  .home .twitts .reviews figure figcaption {
+    width: 62.4%;
+    padding: 34px;
+  }
+}
+@media (max-width: 600px) {
+  .home .twitts .reviews figure figcaption {
+    width: 62.97%;
+    padding: 15px 10px 10px 10px;
+  }
+}
+.home .twitts .reviews figure figcaption::after {
+  content: '';
+  position: absolute;
+  top: 27px;
+  z-index: -1;
+  width: 15px;
+  height: 15px;
+  background-color: #f7f8f8;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.home .twitts .reviews figure figcaption p {
+  margin: 0;
+  font-family: "Open sans";
+  font-weight: 400;
+  font-size: 13px;
+  color: #676767;
+}
+@media (max-width: 767px) {
+  .home .twitts .reviews figure figcaption p {
+    font-size: 26px;
+  }
+}
+@media (max-width: 600px) {
+  .home .twitts .reviews figure figcaption p {
+    font-size: 18px;
+  }
+}
+.home .twitts .reviews figure.left img {
+  float: left;
+}
+.home .twitts .reviews figure.left figcaption {
+  float: right;
+}
+.home .twitts .reviews figure.left figcaption::after {
+  left: -8px;
+}
+@media (max-width: 767px) {
+  .home .twitts .reviews figure.left figcaption::after {
+    top: 55px;
+    left: -15px;
+    width: 30px;
+    height: 30px;
+  }
+}
+@media (max-width: 600px) {
+  .home .twitts .reviews figure.left figcaption::after {
+    top: 35px;
+    left: -8px;
+    width: 15px;
+    height: 15px;
+  }
+}
+.home .twitts .reviews figure.right img {
+  float: right;
+}
+.home .twitts .reviews figure.right figcaption {
+  float: left;
+}
+.home .twitts .reviews figure.right figcaption::after {
+  right: -8px;
+}
+.home .tour {
+  padding: 38px 0;
+  background-color: #14629a;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .tour {
+    padding: 50px 0;
+  }
+}
+@media (max-width: 767px) {
+  .home .tour {
+    padding: 90px 0 95px;
+  }
+}
+.home .tour .tour-container {
+  padding: 0;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .tour .tour-container {
+    padding: 0 15px;
+  }
+}
+@media (max-width: 767px) {
+  .home .tour .tour-container {
+    padding: 0 15px;
+  }
+}
+.home .tour .tour-container h2 {
+  margin: 0;
+  font-family: "Helvetica Light";
+  font-weight: 300;
+  font-size: 23.9px;
+  line-height: 58px;
+  color: #fafbfc;
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .home .tour .tour-container h2 {
+    font-size: 19px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .tour .tour-container h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+}
+@media (max-width: 767px) {
+  .home .tour .tour-container h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .home .tour .tour-container h2 {
+    font-size: 35px;
+    line-height: 40px;
+    text-align: center;
+  }
+}
+.home .tour .tour-container .wave {
+  height: 58px;
+  background-image: url("../../images/shape.png");
+  background-repeat: no-repeat;
+  background-position: 0 65%;
+  background-size: contain;
+}
+.home .tour .tour-container .button {
+  background-color: #ffffff;
+  line-height: 58px;
+  background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, rgba(246, 246, 246, 0.6)), color-stop(100%, #b8babb));
+  background-image: -webkit-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, #b8babb 100%);
+  background-image: -moz-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, #b8babb 100%);
+  background-image: -o-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, #b8babb 100%);
+  background-image: radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, #b8babb 100%);
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .home .tour .tour-container .button {
+    margin-top: 55px;
+    font-size: 30px;
+    line-height: 80px;
+  }
+}
+@media (max-width: 767px) {
+  .home .tour .tour-container .button {
+    margin-top: 55px;
+    font-size: 30px;
+    line-height: 115px;
+  }
+}
+.home .tour .tour-container .button:hover {
+  background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, #f6f6f6), color-stop(100%, rgba(184, 186, 187, 0.6)));
+  background-image: -webkit-radial-gradient(top, #f6f6f6 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: -moz-radial-gradient(top, #f6f6f6 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: -o-radial-gradient(top, #f6f6f6 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: radial-gradient(top, #f6f6f6 0%, rgba(184, 186, 187, 0.6) 100%);
 }
