--- a/client/styles/scss/layouts/home/_events.scss
+++ b/client/styles/scss/layouts/home/_events.scss
@@ -9,7 +9,7 @@
         max-width: 970px;
         margin: 0 auto;
         padding: 110px 15px 170px;
-        @include breakpoint(small) {
+        @include breakpoint(extra-small) {
             padding: 50px 15px 105px;
         }
         h2 {
@@ -18,7 +18,7 @@
             font-weight: 300;
             font-size: 36px;
             color: #fafbfc;
-            @include breakpoint(extra-small) {
+            @include breakpoint(s-extra-small) {
                 font-size: 24px;
             }
         }
@@ -27,7 +27,7 @@
         margin: 0 auto;
         font-size: 0;
         text-align: left;
-        @include breakpoint(medium) {
+        @include breakpoint(small) {
             text-align: center;
         }
 
@@ -37,10 +37,10 @@
             margin: 70px 50px 0 0;
             vertical-align: top;
             text-align: center;
-            @include breakpoint(medium) {
+            @include breakpoint(small) {
                 max-width: 205px;
             }
-            @include breakpoint(small) {
+            @include breakpoint(extra-small) {
                 display: block;
                 max-width: 500px;
                 margin: 50px auto 0;
@@ -48,7 +48,7 @@
 
             &:last-child {
                 margin-right: 0;
-                @include breakpoint(small) {
+                @include breakpoint(extra-small) {
                     margin-right: auto;
                 }
             }
@@ -68,7 +68,7 @@
                     font-family: "Helvetica";
                     font-weight: 400;
                     font-size: 16px;
-                    @include breakpoint(small) {
+                    @include breakpoint(extra-small) {
                         margin-top: 15px;
                     }
                 }
