--- a/client/styles/scss/index.scss
+++ b/client/styles/scss/index.scss
@@ -14,10 +14,12 @@
 @import "fonts/helvetica";
 
 //components
+@import "components/logo";
 @import "components/button";
 
 //widgets
 @import "widgets/header";
+@import "widgets/footer";
 
 //layouts
 @import "layouts/home";
