--- a/client/styles/scss/layouts/_home.scss
+++ b/client/styles/scss/layouts/_home.scss
@@ -4,7 +4,7 @@
     background-size: cover;
 
 
-    @import "home/getting";
+    @import "home/sign-in";
     @import "home/events";
     @import "home/twitts";
     @import "home/tour";
