--- a/client/styles/scss/_base.scss
+++ b/client/styles/scss/_base.scss
@@ -6,6 +6,14 @@
         clear: both;
     }
 }
+h1,h2,h3,h4{
+    font-family: "Helvetica Light";
+    color: #ffffff;
+}
+a{
+    font-family: "Open sans";
+    font-weight: 600;
+}
 a, a:hover{
     text-decoration: none;
 }
