--- a/client/styles/scss/layouts/home/_events.scss
+++ b/client/styles/scss/layouts/home/_events.scss
@@ -14,10 +14,7 @@
         }
         h2 {
             margin-bottom: 0;
-            font-family: "Helvetica Light";
-            font-weight: 300;
             font-size: 36px;
-            color: #fafbfc;
             @include breakpoint(s-extra-small) {
                 font-size: 24px;
             }
@@ -53,13 +50,15 @@
                 }
             }
 
+            img{
+                @include user-select(none);
+            }
+
             figcaption {
                 color: #ffffff;
 
                 h3 {
                     margin: 25px 0 0;
-                    font-family: "Helvetica Light";
-                    font-weight: 300;
                     font-size: 26px;
                 }
 
