--- a/client/styles/scss/layouts/home/_sign-in.scss
+++ b/client/styles/scss/layouts/home/_sign-in.scss
@@ -1,14 +1,13 @@
-.getting {
+.sign-in{
 
         h2 {
-            margin: 34px 0 0;
+            padding: 10px 0;
             background-color: #1769a4;
-            font-family: "Helvetica Light";
-            font-size: 44px;
+            font-size: 43.2px;
             line-height: 60px;
-            color: #ffffff;
             @include breakpoint(extra-small) {
                 font-size: 38px;
+                text-align: center;
             }
             @include breakpoint(s-extra-small) {
                 font-size: 28px;
@@ -43,7 +42,6 @@
             .button {
                 font-size: 13px;
                 line-height: 38px;
-                text-align: center;
                 color: #494a4a;
                 @include breakpoint(extra-small) {
                     font-size: 20px;
@@ -105,7 +103,7 @@
                 p {
                     margin: 0;
                     font-size: 13px;
-                    background-image: url("../../images/or-u-can.png");
+                    background-image: url("../../images/backgrounds/or-u-can.png");
                     background-repeat: no-repeat;
                     background-position: 0 45%;
                     background-size: cover;
@@ -144,6 +142,7 @@
         img{
             width: 100%;
             height: 100%;
+            @include user-select(none);
         }
     }
 
